# xd

./: .flake8  .gitignore  AWS.md  CLAUDE.md  CONTRIBUTING  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PROCESSING.md  README  README.md  README.rst  bashrc  config  constants.py  crossword.py  download-puzzle-test.py  errors.py  findmatches.sql  main.py  puz.py  puz2xd-standalone.py  puzzle.py  pyproject.toml  requirements.txt  scrape-xd.py  setup.py  tox.ini  utils.py  xdfile.py  xdlint.py  xwi2xd.py  xwi2xdzip.py
aws/: config  configure-ec2.sh  get-recent-xd.sh  userdata-bootstrap.sh
crossword/: __init__.py  compat.py  core.py  exceptions.py  format_ipuz.py  format_puz.py
doc/: about.adoc  about.md  character-encoding.md  products.tsv  rebus-conventions.md  xd-format.md  zip-README
queries/: analyze-puzzle.py  annotate-puzzle.py  cryptics.py  enumclues.py  findsimilar.py  freqcount.py  getclues.py  remix.py  similarity.py  smallgrids.py  xdstats.py
scrapers/: README.md  __init__.py  basescraper.py  chronicle.py  denverpost.py  dl-xwordinfo.com.py  latimes.py  newsday.py  nytimes.py  puz2xd.py  theglobeandmail.py  usatoday.py  wapost.py  washingtonpost.py  wsj.py  xwi2xd.py  xwordinfo.py
scripts/: 00-aws-bootstrap.sh  00-aws-ebs-bootstrap.sh  00-aws-ec2-configure.sh  00-aws-ec2-deconfigure.sh  00-aws-ec2-launch-manual-ebs.sh  00-aws-ec2-launch-manual.sh  00-aws-s3-setup.sh  00-aws-ses-setup.sh  00-ebs-snapshots.sh  00-ebs-start.sh  00-ec2-launch-manual.sh  00-full.sh  00-logging-wrapper.sh  00z-aws-deconfigure.sh  01-catalog-source.py  01-create-ami.sh  (+111 more)
(+120 files in other folders)
