[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "xdfile"
version = "1.9.0"
description = "A futureproof crossword corpus toolset"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Saul Pwanson", email = "xd@saul.pw" },
]
keywords = ["crossword", "puzzles", "xd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/century-arcade/xd"

[project.optional-dependencies]
puz = ["puzpy", "crossword"]
xml = ["lxml"]
all = ["puzpy", "crossword", "lxml"]

[tool.setuptools.packages.find]
include = ["xdfile*", "crossword*"]
